remove: 移除 fileManager 中文件浏览前端组件 RichFilemanager